--- a/perugourmet/dessert.html
+++ b/perugourmet/dessert.html
@@ -16,7 +16,7 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./fotos/arrozconleche.png" class="d-block w-100" alt="...">
+            <img src="./fotos/alfajores.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="./fotos/crema de lucuma helado.png" class="d-block w-100" alt="...">
@@ -67,7 +67,17 @@
             available to them, which were used to prepare innumerable and exquisite desserts,
              allowing the birth of Peruvian confectionery, as unique as it is appreciated.  
         </p>
+
+        <p class="para1">
+            Craving a satisfying Peruvian dessert after your main course? We’ve got the perfect recipe to complete your full course menu 
+            from South America’s hottest food destination.
+        </p>
     </div>
+
+
+
+
+    
 
     <div class="row mx-1">
 
@@ -76,13 +86,15 @@
             
 
             <div class="card1" style="width: 25rem;">
-                <img src="./fotos/arrozconleche.png"  class="card-img-top"alt="">
+                <img src="./fotos/arroz con leche.png"  class="card-img-top"alt="">
                 <div class="card-body">
                     <h1 class="titulo">Arroz con Leche</h1> 
                     <h2 class="titulo2">Rice pudding</h2>
                     <p class="card-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis eos nam nisi ipsum facilis adipisci dignissimos enim laudantium porro repellat accusantium architecto necessitatibus explica
-                        bo distinctio, ut rerum a iste hic.
+                        Arroz con leche is the Peruvian take on the classic rice pudding.
+                       <p>
+                        It  will definitely hit the sweet spot! 
+                       </p>
                     </p>
                 </div>
             </div>
@@ -91,8 +103,12 @@
             <div class="card-5" >
                 <div class="card-animation">
                     <div class="content-card">
-                      <h1>Hello</h1>
-                      <p>This is an amazing card with nice animation</p>
+                      <h1>Hello Travellers</h1>
+                      <p>To prepare arroz con leche, you’ll need rice, egg yolks, sugar, cinnamon, butter, nutmeg, 
+                        and condensed milk. These ingredients create a consistent, creamy pudding (when done right).
+                         It usually takes somewhere between 25-30 minutes to prepare. You can also try adding one slice 
+                         of lemon or orange peel for a bitter taste. Some people also like to add raisins on top. This is also a 
+                        popular kind of street food that you must try if you visit Peru.</p>
                     </div>
                 </div>
             </div>
@@ -107,8 +123,11 @@
                     <div class="card-body">
                         <h1 class="titulo">Crema de Lucuma</h1> 
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis eos nam nisi ipsum facilis adipisci dignissimos enim laudantium porro repellat accusantium architecto necessitatibus explica
-                            bo distinctio, ut rerum a iste hic.
+                            It’s clear that when it comes to the last course, the influence of Europe, and in particular Spain,
+                            is responsible for the majority of dishes.
+                            <p>
+                                Really good! Here's something else you could say instead of delicious.
+                            </p>
                         </p>
                     </div>
                 </div>  
@@ -117,8 +136,14 @@
              <div class="card-5" >
                 <div class="card-animation">
                     <div class="content-card">
-                      <h1>Hello</h1>
-                      <p>This is an amazing card with nice animation</p>
+                      <h1>Hello Travellers</h1>
+                      <p>Many of the dishes started life in the homes of people in Madrid, Barcelona, 
+                        and Seville. The Italians brought Cream and Gelato, and this is where we get Lucuma 
+                        Ice Cream. The centerpiece of this dish is the superfood Peruvian fruit called Lucuma. 
+                        Many people think this unique Peruvian fruit has tones of butterscotch, caramel, brown
+                         sugar, and even ice cream. So that makes it perfect for adding to more traditional ingredients 
+                         like milk, eggs, sugar,
+                         cream and vanilla to make this very popular treat.</p>
                     </div>
                 </div>
             </div>    
@@ -133,8 +158,13 @@
                     <div class="card-body">
                         <h1 class="titulo">Mazamorra Morada</h1> 
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis eos nam nisi ipsum facilis adipisci dignissimos enim laudantium porro repellat accusantium architecto necessitatibus explica
-                            bo distinctio, ut rerum a iste hic.
+                            Mazamorra morada is a famous pudding made from fruit and Peruvian purple corn. 
+                            Imagine the consistency and taste of blackberry pies, but with a characteristic flavoring of 
+                            ground cinnamon and cloves.
+                        <p>
+
+                        </p>
+                            Sweet, Succulent, Juicy, Delish... Life is short, eat dessert first.
                         </p>
                     </div>
                 </div>
@@ -143,8 +173,13 @@
                 <div class="card-5" >
                     <div class="card-animation">
                         <div class="content-card">
-                          <h1>Hello</h1>
-                          <p>This is an amazing card with nice animation</p>
+                          <h1>Hello Travellers</h1>
+                          <p>To prepare mazamorra morada, you’ll need dried purple corn, a couple of cinnamon sticks,
+                             1 apple, ½ pineapple, 1 teaspoon of whole cloves, lime juice, and a cup of dried fruit. 
+                             You can also add a quince if you feel like it. 
+                            There are many ways to prepare this dessert (adding apricots or cherries, for example) 
+                            but we recommend that you start with the basic recipe at first before adding any more ingredients.
+                          </p>
                         </div>
                     </div>
                 </div>  
@@ -159,8 +194,12 @@
                     <div class="card-body">
                         <h1 class="titulo">Suspiro Limeño</h1> 
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis eos nam nisi ipsum facilis adipisci dignissimos enim laudantium porro repellat accusantium architecto necessitatibus explica
-                            bo distinctio, ut rerum a iste hic.
+                            One of our favorite dessert dishes and one that will surely rock your world too. 
+                            Suspiro de Limeña literally translates to the sigh of the lady from Lima and is 
+                            also known as Suspiro Limeño (Liman sigh).
+                            <p>
+                                I'm just here for the desserts and good vibes.
+                            </p>
                         </p>
                     </div>
                 </div>
@@ -171,8 +210,9 @@
                  <div class="card-5" >
                     <div class="card-animation">
                         <div class="content-card">
-                          <h1>Hello</h1>
-                          <p>This is an amazing card with nice animation</p>
+                          <h1>Hello Travellers</h1>
+                          <p>This Peruvian dessert consists of two parts. The top part is fluffy meringue that’s made with egg whites, cinnamon, and port wine, while the bottom part is the manjar blanco caramel cream that’s made from milk,
+                             egg yolks, vanilla, and sugar.</p>
                         </div>
                     </div>
                 </div>  
@@ -188,8 +228,12 @@
                     <div class="card-body">
                         <h1 class="titulo">Turron</h1> 
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis eos nam nisi ipsum facilis adipisci dignissimos enim laudantium porro repellat accusantium architecto necessitatibus explica
-                            bo distinctio, ut rerum a iste hic.
+                            Turrón de Doña Pepa is a popular cake in Peru that has been around for centuries. 
+                            There’s a popular story that the dessert was invented by a Peruvian woman during a
+                            religious procession held in the center of Lima.
+                            <p>
+                                Dessert: the sweetest form of self-love.
+                            </p>
                         </p>
                     </div>
                 </div>
@@ -198,8 +242,10 @@
                  <div class="card-5" >
                     <div class="card-animation">
                         <div class="content-card">
-                          <h1>Hello</h1>
-                          <p>This is an amazing card with nice animation</p>
+                          <h1>Hello Travellers</h1>
+                          <p>Peruvians usually eat it around October, the purple month (el mes morada). It’s a soft nougat dessrt sprinkled with colorful candies and filled with chancaca, 
+                            a sweet Peruvian sauce made of raw sugarcane sugar. The recipe also includes butter, anise seeds, eggs, flour, and sugar. You can find common variations with flavors like allspice, cinnamon,
+                             lime juice, orange zest, cloves, and vanilla.</p>
                         </div>
                     </div>
                 </div>  
@@ -214,8 +260,11 @@
                     <div class="card-body">
                         <h1 class="titulo">Picarones</h1> 
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis eos nam nisi ipsum facilis adipisci dignissimos enim laudantium porro repellat accusantium architecto necessitatibus explica
-                            bo distinctio, ut rerum a iste hic.
+                            If you wander around most streets in Peru in the evening, you are bound
+                            to come across these simple dessert snack foods. The aroma will probably entice you to take a further look. 
+                        </p>
+                        <p>
+                            Desserts are the fairy tales of the kitchen.
                         </p>
                     </div>
                 </div>
@@ -224,8 +273,10 @@
                  <div class="card-5" >
                     <div class="card-animation">
                         <div class="content-card">
-                          <h1>Hello</h1>
-                          <p>This is an amazing card with nice animation</p>
+                          <h1>Hello Travellers</h1>
+                          <p>Picarones recipe</p>
+                          <p>Often referred to as the Peruvian doughnuts thanks to the same rounded shape with a hole in the center. However, unlike conventional donuts, picarones use more than eggs and flour. Corn, sweet potato, squash, anise, and beer are just some of the other
+                             ingredients that add a distinctive flavor to this deep-fried treat.</p>
                         </div>
                     </div>
                 </div>  
@@ -239,8 +290,12 @@
                     <div class="card-body">
                         <h1 class="titulo">Alfajores</h1> 
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis eos nam nisi ipsum facilis adipisci dignissimos enim laudantium porro repellat accusantium architecto necessitatibus explica
-                            bo distinctio, ut rerum a iste hic.
+                            Alfajores cookies (made with manjar blanco caramel sauce) are popular throughout South America. 
+                            The Peruvian way of preparing this sweet treat is to put two rounded cookies together with manjar 
+                            blanco in between. 
+                        </p>
+                        <p>
+                            Dessert is the sweetest way to end a meal and start the day.
                         </p>
                     </div>
                 </div>
@@ -248,8 +303,15 @@
             <div class="card-5" >
                 <div class="card-animation">
                     <div class="content-card">
-                    <h1>Hello</h1>
-                    <p>This is an amazing card with nice animation</p>
+                    <h1>Hello Travellers</h1>
+                    <p>
+                        Alfajor Recipe
+                    </p>
+                    <p>Made with butter, flour, cornstarch, egg yolks, and powdered sugar. And of course, the manjar 
+                        blanco (also known as dulce de leche). The final touch is a sprinkling of sugar on top for extra sweetness.
+                        This dessert is perfect for those who like dry and sweet cookies. Alfajores are often served with a cup of 
+                        hot chocolate or coffee.
+                    </p>
                     </div>
                 </div>
             </div>  
