--- a/tourperu/ancash.html
+++ b/tourperu/ancash.html
@@ -8,7 +8,39 @@
 </head>
 <body>
     
+    <!-- INTRODUCTION  -  ANIMATIONS AT THE TOP- CSS -->    
+    <header>
+        <div class="container">
+            <ul>                      
+            
+            </ul>
+        </div>        
+    </header>
 
+
+
+
+
+  
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
+integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+crossorigin="anonymous"></script>
+</body>
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- Cards of Routes -->
 
     <div class="box-wrapper">
         <figure class="shape-box shape-box_half">
