--- a/tourperu/cusco.html
+++ b/tourperu/cusco.html
@@ -43,7 +43,7 @@
     
         <div class="box-wrapper">
             <figure class="shape-box shape-box_half">
-                <img src="././fotoancash/fotoancash4.png" alt="">
+                <img src="./cuscofotos/cusco1.png" alt="">
                 <div class="brk-abs-overlay z-index-0 bg-black opacity-60"></div>
                 <figcaption>
                     <div class="show-cont">
@@ -56,7 +56,7 @@
                 <span class="after"></span>
             </figure>
             <figure class="shape-box shape-box_half">
-                <img src="https://images.unsplash.com/photo-1512295767273-ac109ac3acfa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80">
+                <img src="./cuscofotos/cusco2.png" alt="">
                 <div class="brk-abs-overlay z-index-0 bg-black opacity-60"></div>
                 <figcaption>
                     <div class="show-cont">
@@ -69,7 +69,7 @@
                 <span class="after"></span>
             </figure>
             <figure class="shape-box shape-box_half">
-                <img src="https://images.unsplash.com/photo-1498075702571-ecb018f3752d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=757&q=80">
+                <img src="./cuscofotos/cusco3.png" alt="">
                 <div class="brk-abs-overlay z-index-0 bg-black opacity-60"></div>
                 <figcaption>
                     <div class="show-cont">
@@ -82,7 +82,7 @@
                 <span class="after"></span>
             </figure>
             <figure class="shape-box shape-box_half">
-                <img src="https://images.unsplash.com/photo-1534669740902-e09e38a6a29f?ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80">
+                <img src="./cuscofotos/cusco4.png" alt="">
                 <div class="brk-abs-overlay z-index-0 bg-black opacity-60"></div>
                 <figcaption>
                     <div class="show-cont">
