fixed: img and linked

--- a/tourperu/chiclayo.html
+++ b/tourperu/chiclayo.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./ancash.css">
+    <link rel="stylesheet" href="./chiclayo.css">
     <title>Document</title>
 </head>
-<>
+
     
     <!-- INTRODUCTION  -  ANIMATIONS AT THE TOP- CSS -->    
     <header>
