Feat: adding photos to each page

--- a/tourperu/puno.html
+++ b/tourperu/puno.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./ancash.css">
+    <link rel="stylesheet" href="./puno.css">
     <title>Document</title>
 </head>
-<>
+
     
     <!-- INTRODUCTION  -  ANIMATIONS AT THE TOP- CSS -->    
     <header>
@@ -43,7 +43,7 @@
     
         <div class="box-wrapper">
             <figure class="shape-box shape-box_half">
-                <img src="././fotoancash/fotoancash4.png" alt="">
+                <img src="./punofotos/PUNO1.png" alt="">
                 <div class="brk-abs-overlay z-index-0 bg-black opacity-60"></div>
                 <figcaption>
                     <div class="show-cont">
@@ -56,7 +56,7 @@
                 <span class="after"></span>
             </figure>
             <figure class="shape-box shape-box_half">
-                <img src="https://images.unsplash.com/photo-1512295767273-ac109ac3acfa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80">
+                <img src="./punofotos/puno2.png">
                 <div class="brk-abs-overlay z-index-0 bg-black opacity-60"></div>
                 <figcaption>
                     <div class="show-cont">
@@ -69,7 +69,7 @@
                 <span class="after"></span>
             </figure>
             <figure class="shape-box shape-box_half">
-                <img src="https://images.unsplash.com/photo-1498075702571-ecb018f3752d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=757&q=80">
+                <img src="./punofotos/fotos3.png">
                 <div class="brk-abs-overlay z-index-0 bg-black opacity-60"></div>
                 <figcaption>
                     <div class="show-cont">
@@ -82,7 +82,7 @@
                 <span class="after"></span>
             </figure>
             <figure class="shape-box shape-box_half">
-                <img src="https://images.unsplash.com/photo-1534669740902-e09e38a6a29f?ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80">
+                <img src="./punofotos/png4.png">
                 <div class="brk-abs-overlay z-index-0 bg-black opacity-60"></div>
                 <figcaption>
                     <div class="show-cont">
