feat: folder in each css and html

--- a/tourperu/routesspecifics/routespecific.html/routesspecificancash.html
+++ b/tourperu/routesspecifics/routespecific.html/routesspecificancash.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./routespecificancash.css">
+  <link rel="stylesheet" href="../routespecific.styles/routespecificancash.css">
   <title>Document</title>
 </head>
 
@@ -14,7 +14,8 @@
       <h2> TimeLine </h2>
     </div> 
     <div class="introduction">
-      <p>In TourPeruTravellers, we offer you this magnificent inka route where u enjoy mountains, archaeological sites</p>
+      <p>
+        In TourPeruTravellers, we offer you this magnificent inka route where u enjoy mountains, archaeological sites</p>
 
     </div>
 
@@ -26,7 +27,7 @@
           <div class="content">
             <h3>What is Lorem Ipsum?</h3>
 
-            <p><img class="imagen" src="../fotoancash/fotoancash2.png" alt="">
+            <p><img class="imagen" src="/tourperu/fotoancash/fotoancash2.png" alt="">
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
               Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
               when an unknown printer took a galley of type and scrambled it to make a type
