feat: adding otherroutes

--- a/tourperu/routesspecifics/routespecific.html/routesspecificica falta.html
+++ b/tourperu/routesspecifics/routespecific.html/routesspecificica falta.html
@@ -9,7 +9,7 @@
 
   
   
-    <h1>Tour Iquitos - Tucan</h1>
+    <h1>Itinerary Ica </h1>
     <div class="introduction">
       <h2> TimeLine </h2>
     </div> 
@@ -18,7 +18,7 @@
       </div>
 
       <div class="introduction">
-        <p>TUCAN PROGRAM 3 DAYS 2 NIGHTS</p>
+        <p></p>
     
       </div>
 
